# race-qr-bootstrap

./: .gitignore  CMakeLists.txt  README.md  build_artifacts.sh  build_artifacts_in_docker_image.sh  clean_artifacts.sh  helper_functions.sh
.github/workflows/: ci.yml
loader/source/: CMakeLists.txt  loader.cpp  manifest.json  warnings.cmake.txt
plugin/: CMakeLists.txt  README.md  build.gradle  build_android_dex.sh  pom.xml  settings.gradle
plugin/channels/bootstrapQrWifi/: channel_properties.json  generate_configs.py
plugin/src/main/: AndroidManifest.xml
plugin/src/main/java/race/: BootstrapQrWifi.java  BootstrapQrWifiProfileParser.java  Channels.java  ConfigParser.java  Connection.java  DirectLink.java  DirectLinkProfileParser.java  Link.java  LinkProfileParser.java  Log.java  PersistentStorageHelpers.java  PluginCommsQrWifiJava.java  Time.java  TinyWebServer.java  TwosixWhiteboardLink.java  TwosixWhiteboardLinkProfileParser.java
plugin/src/test/java/race/: PluginCommsQrWifiJavaTest.java
scripts/: build.sh  common.sh  format-code.sh  pull_gitlab_artifacts.sh  start-performer-services.sh
test/common/: warnings.cmake.txt
test/loader-test/source/: CMakeLists.txt  main.cpp
